# ShopAI

./: .gitignore  README.md  pyproject.toml
src/shopai/: crew.py  main.py  prompts.py
src/shopai/api/: app.py
src/shopai/config/: agents.yaml  tasks.yaml
src/shopai/mobile/: gradle.properties  settings.gradle.kts
src/shopai/mobile/app/: build.gradle.kts
src/shopai/mobile/app/src/main/: AndroidManifest.xml
src/shopai/mobile/app/src/main/java/com/shopai/android/: MainActivity.kt
src/shopai/mobile/app/src/main/java/com/shopai/android/data/api/: RetrofitClient.kt  ShopAIApiService.kt
src/shopai/mobile/app/src/main/java/com/shopai/android/data/model/: Models.kt
src/shopai/mobile/app/src/main/java/com/shopai/android/data/repository/: OutfitRepository.kt
src/shopai/mobile/app/src/main/java/com/shopai/android/navigation/: NavGraph.kt
src/shopai/mobile/app/src/main/java/com/shopai/android/prefs/: Session.kt
src/shopai/mobile/app/src/main/java/com/shopai/android/reusables/: BodyTypeCard.kt  ChipSelector.kt  PrimaryButton.kt  ProductCard.kt  ShopAITopBar.kt
src/shopai/mobile/app/src/main/java/com/shopai/android/screens/: MoodScreen.kt  ProfileScreen.kt  RecommendationScreen.kt  VisualizeScreen.kt
src/shopai/mobile/app/src/main/java/com/shopai/android/viewmodel/: MoodViewModel.kt  ProfileViewModel.kt  RecommendationViewModel.kt  VisualizeViewModel.kt
src/shopai/tools/: outfit_scraper_tool.py  outfit_visualization_tool.py  weather_tool.py
src/shopai/tools/api_reference/: weather_api.md
(+3 files in other folders)
