[project]
name = "shopai"
version = "0.1.0"
description = "ShopAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.5a2",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]

[project.scripts]
shopai = "shopai.main:run"
run_crew = "shopai.main:run"
train = "shopai.main:train"
replay = "shopai.main:replay"
test = "shopai.main:test"
run_with_trigger = "shopai.main:run_with_trigger"
run_api = "shopai.main:run_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
